--- a/index.html
+++ b/index.html
@@ -15,6 +15,29 @@
       background-color: #121212;
       color: #ffffff;
     }
+
+    /* NAVBAR FIXA */
+    .navbar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 60px;
+      background-color: #1f1f1f;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 999;
+      border-bottom: 1px solid #333;
+    }
+
+    .navbar h2 {
+      color: #fff;
+      font-size: 1.2rem;
+      margin: 0;
+    }
+
+    /* SECTION */
     section {
       scroll-snap-align: start;
       min-height: 100vh;
@@ -22,54 +45,89 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding: 2rem;
+      padding: 100px 2rem 2rem;
       box-sizing: border-box;
       text-align: center;
+      position: relative;
     }
+
     h1 {
       font-size: 2rem;
       margin-bottom: 1rem;
     }
+
     p {
       font-size: 1.2rem;
       max-width: 500px;
     }
+
     .icon {
       font-size: 4rem;
       margin-bottom: 1rem;
+    }
+
+    /* SETA ANIMADA */
+    .scroll-hint {
+      position: absolute;
+      bottom: 20px;
+      font-size: 1.5rem;
+      animation: pulse 1.5s infinite;
+      opacity: 0.6;
+    }
+
+    @keyframes pulse {
+      0% { transform: translateY(0); opacity: 0.6; }
+      50% { transform: translateY(6px); opacity: 1; }
+      100% { transform: translateY(0); opacity: 0.6; }
+    }
+
+    /* OCULTA A SETA NA ÚLTIMA SECTION */
+    section:last-of-type .scroll-hint {
+      display: none;
     }
   </style>
 </head>
 <body>
 
+  <!-- NAVBAR -->
+  <div class="navbar">
+    <h2>🚛 Fluxo de Expedição</h2>
+  </div>
+
+  <!-- ETAPAS -->
   <section>
     <div class="icon">📥</div>
     <h1>1. Pedido Recebido</h1>
     <p>O sistema registra o pedido e ele é enviado automaticamente para a fila de separação.</p>
+    <div class="scroll-hint">⬇️</div>
   </section>
 
   <section>
     <div class="icon">📦</div>
     <h1>2. Separação</h1>
     <p>O operador utiliza o coletor de dados para localizar e separar os itens do pedido.</p>
+    <div class="scroll-hint">⬇️</div>
   </section>
 
   <section>
     <div class="icon">🔍</div>
     <h1>3. Conferência</h1>
     <p>Conferente valida os itens separados, garantindo que tudo esteja conforme o pedido.</p>
+    <div class="scroll-hint">⬇️</div>
   </section>
 
   <section>
     <div class="icon">🚚</div>
     <h1>4. Expedição</h1>
     <p>Após conferido, o pedido é encaminhado para a expedição, aguardando o transporte.</p>
+    <div class="scroll-hint">⬇️</div>
   </section>
 
   <section>
     <div class="icon">✅</div>
     <h1>5. Saída da Mercadoria</h1>
     <p>Mercadoria liberada, com emissão da nota fiscal e baixa no sistema.</p>
+    <!-- sem seta aqui -->
   </section>
 
 </body>
