--- a/index.html
+++ b/index.html
@@ -16,28 +16,6 @@
       color: #ffffff;
     }
 
-    /* NAVBAR FIXA */
-    .navbar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 60px;
-      background-color: #1f1f1f;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 999;
-      border-bottom: 1px solid #333;
-    }
-
-    .navbar h2 {
-      color: #fff;
-      font-size: 1.2rem;
-      margin: 0;
-    }
-
-    /* SECTION */
     section {
       scroll-snap-align: start;
       min-height: 100vh;
@@ -45,7 +23,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding: 100px 2rem 2rem;
+      padding: 60px 2rem 80px;
       box-sizing: border-box;
       text-align: center;
       position: relative;
@@ -66,7 +44,6 @@
       margin-bottom: 1rem;
     }
 
-    /* SETA ANIMADA */
     .scroll-hint {
       position: absolute;
       bottom: 20px;
@@ -81,7 +58,6 @@
       100% { transform: translateY(0); opacity: 0.6; }
     }
 
-    /* OCULTA A SETA NA ÚLTIMA SECTION */
     section:last-of-type .scroll-hint {
       display: none;
     }
@@ -89,12 +65,6 @@
 </head>
 <body>
 
-  <!-- NAVBAR -->
-  <div class="navbar">
-    <h2>🚛 Fluxo de Expedição</h2>
-  </div>
-
-  <!-- ETAPAS -->
   <section>
     <div class="icon">📥</div>
     <h1>1. Pedido Recebido</h1>
@@ -127,7 +97,6 @@
     <div class="icon">✅</div>
     <h1>5. Saída da Mercadoria</h1>
     <p>Mercadoria liberada, com emissão da nota fiscal e baixa no sistema.</p>
-    <!-- sem seta aqui -->
   </section>
 
 </body>
