--- a/index.html
+++ b/index.html
@@ -3,141 +3,184 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fluxo de Endereçamento</title>
+  <title>Gerador de Fluxo</title>
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      scroll-snap-type: y mandatory;
-      overflow-y: scroll;
-      height: 100vh;
+    body {
       font-family: sans-serif;
-      background-color: #121212;
-      color: #ffffff;
-    }
-
-    .navbar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 60px;
-      background-color: #1f1f1f;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 999;
-      border-bottom: 1px solid #333;
-    }
-
-    .navbar h2 {
+      background-color: #1e1e1e;
       color: #fff;
-      font-size: 1.2rem;
-      margin: 0;
+      padding: 20px;
     }
-
-    section {
-      scroll-snap-align: start;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      padding: 100px 2rem 60px;
-      box-sizing: border-box;
-      text-align: center;
+    input, textarea, select, button {
+      width: 100%;
+      margin: 8px 0;
+      padding: 10px;
+      border-radius: 4px;
+      border: none;
+      font-size: 1rem;
     }
-
-    .content {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      flex: 1;
+    input, textarea, select {
+      background: #2b2b2b;
+      color: #fff;
     }
-
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
+    button {
+      background-color: #00aaff;
+      color: #fff;
+      cursor: pointer;
     }
-
-    p {
-      font-size: 1.2rem;
-      max-width: 500px;
-    }
-
-    .icon {
-      font-size: 4rem;
-      margin-bottom: 1rem;
-    }
-
-    .scroll-hint {
-      font-size: 1.5rem;
-      animation: pulse 1.5s infinite;
-      opacity: 0.6;
+    .etapas {
       margin-top: 20px;
     }
-
-    @keyframes pulse {
-      0% { transform: translateY(0); opacity: 0.6; }
-      50% { transform: translateY(35px); opacity: 1; }
-      100% { transform: translateY(0); opacity: 0.6; }
+    .etapa {
+      background: #2a2a2a;
+      padding: 10px;
+      border-radius: 6px;
+      margin-bottom: 20px;
+      border: 1px solid #444;
     }
-
-    section:last-of-type .scroll-hint {
-      display: none;
+    .emoji-picker {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 5px;
+      max-height: 150px;
+      overflow-y: auto;
+      background: #2b2b2b;
+      padding: 10px;
+      border-radius: 6px;
+    }
+    .emoji-picker span {
+      cursor: pointer;
+      font-size: 1.5rem;
+    }
+    .preview-area {
+      background: #111;
+      padding: 20px;
+      border-radius: 6px;
+      margin-top: 30px;
+    }
+    iframe {
+      width: 100%;
+      height: 80vh;
+      border: none;
+      background: #fff;
     }
   </style>
 </head>
 <body>
+  <h1>🛠️ Gerador de Página de Fluxo</h1>
 
-  <div class="navbar">
-    <h2>📍 Fluxo de Endereçamento</h2>
+  <section id="config">
+    <label>Nome do Fluxo</label>
+    <input type="text" id="fluxoTitulo" placeholder="Ex: Fluxo de Separação">
+  </section>
+
+  <hr style="margin: 30px 0; border: 1px solid #444;">
+
+  <section id="builder">
+    <h2>Etapas do Processo</h2>
+    <button onclick="adicionarEtapa()">➕ Adicionar Etapa</button>
+    <div id="etapasContainer" class="etapas"></div>
+  </section>
+
+  <hr style="margin: 30px 0; border: 1px solid #444;">
+
+  <section id="acoes">
+    <button onclick="visualizarHTML()">👁️ Visualizar</button>
+    <button onclick="baixarHTML()">💾 Baixar HTML</button>
+    <button onclick="baixarPDF()">🖨️ Salvar em PDF</button>
+  </section>
+
+  <div class="preview-area">
+    <h2>Pré-visualização:</h2>
+    <iframe id="previewFrame"></iframe>
   </div>
 
-  <section>
-    <div class="content">
-      <div class="icon">🔐</div>
-      <h1>1. Acesso ao Sistema</h1>
-      <p>Efetuar login no coletor de dados com seu usuário.</p>
-    </div>
-    <div class="scroll-hint">⬇️</div>
-  </section>
+  <script>
+    let etapas = [];
+    const emojiSet = ['📥','📦','🔍','🚚','✅','📲','📌','🔐','🔎','🛠️','📋','💼','🏷️','🗂️','📁','🗃️','📊','📈','📉','🧾','📑'];
 
-  <section>
-    <div class="content">
-      <div class="icon">🔎</div>
-      <h1>2. Verificação de Endereçamento</h1>
-      <p>Acesse "Consulta de Estoque" no menu do coletor e verifique se o produto possui endereço vinculado no sistema.</p>
-    </div>
-    <div class="scroll-hint">⬇️</div>
-  </section>
+    function emojiPickerHTML(index) {
+      return `<div class='emoji-picker' id='emojiPicker${index}'>` +
+        emojiSet.map(e => `<span onclick=\"selecionarEmoji(${index}, '${e}')\">${e}</span>`).join('') + '</div>';
+    }
 
-  <section>
-    <div class="content">
-      <div class="icon">📌</div>
-      <h1>3. Definição da Localização</h1>
-      <p>Se o produto não tiver endereço, alinhe com o líder de logística onde ele será endereçado: principal ou adicional.</p>
-    </div>
-    <div class="scroll-hint">⬇️</div>
-  </section>
+    function selecionarEmoji(index, emoji) {
+      document.getElementById(`emojiInput${index}`).value = emoji;
+    }
 
-  <section>
-    <div class="content">
-      <div class="icon">📲</div>
-      <h1>4. Vinculação do Endereço</h1>
-      <p>Bipe o código de barras do produto e, em seguida, bipar a localização desejada na gôndola.</p>
-    </div>
-    <div class="scroll-hint">⬇️</div>
-  </section>
+    function adicionarEtapa() {
+      const index = etapas.length;
+      const container = document.getElementById('etapasContainer');
+      const div = document.createElement('div');
+      div.className = 'etapa';
+      div.innerHTML = `
+        <label>Ícone (emoji ou imagem)</label>
+        <input type="text" id="emojiInput${index}" placeholder="Escolha um emoji ou envie imagem" readonly>
+        ${emojiPickerHTML(index)}
+        <input type="file" id="imgInput${index}" accept="image/*" onchange="carregarImagem(${index})">
 
-  <section>
-    <div class="content">
-      <div class="icon">✅</div>
-      <h1>5. Confirmação</h1>
-      <p>O sistema registrará o produto como endereçado na localização vinculada.</p>
-    </div>
-  </section>
+        <label>Título da Etapa</label>
+        <input type="text" id="titulo${index}" placeholder="Ex: Separação">
 
+        <label>Descrição da Etapa</label>
+        <textarea id="descricao${index}" rows="2" placeholder="Descreva o que acontece nesta etapa..."></textarea>
+      `;
+      container.appendChild(div);
+      etapas.push(index);
+    }
+
+    function carregarImagem(index) {
+      const fileInput = document.getElementById(`imgInput${index}`);
+      const reader = new FileReader();
+      reader.onload = function(e) {
+        document.getElementById(`emojiInput${index}`).value = `<img src='${e.target.result}' style='width:60px;height:60px;'>`;
+      };
+      reader.readAsDataURL(fileInput.files[0]);
+    }
+
+    function gerarHTMLFinal() {
+      const titulo = document.getElementById('fluxoTitulo').value || 'Fluxo Operacional';
+      let html = `<!DOCTYPE html>\n<html lang=\"pt-BR\">\n<head>\n<meta charset=\"UTF-8\">\n<meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n<title>${titulo}</title>\n<style>\nhtml, body {margin:0;padding:0;scroll-snap-type:y mandatory;overflow-y:scroll;height:100vh;font-family:sans-serif;background-color:#121212;color:#ffffff;}\n.navbar {position:fixed;top:0;left:0;width:100%;height:60px;background-color:#1f1f1f;display:flex;align-items:center;justify-content:center;z-index:999;border-bottom:1px solid #333;}\n.navbar h2 {color:#fff;font-size:1.2rem;margin:0;}\nsection {scroll-snap-align:start;min-height:100vh;display:flex;flex-direction:column;justify-content:space-between;align-items:center;padding:100px 2rem 60px;box-sizing:border-box;text-align:center;}\n.content {display:flex;flex-direction:column;justify-content:center;align-items:center;flex:1;}\nh1 {font-size:2rem;margin-bottom:1rem;}\np {font-size:1.2rem;max-width:500px;}\n.icon {font-size:4rem;margin-bottom:1rem;}\n.scroll-hint {font-size:1.5rem;animation:pulse 1.5s infinite;opacity:0.6;margin-top:20px;}\n@keyframes pulse {0%{transform:translateY(0);opacity:0.6;}50%{transform:translateY(35px);opacity:1;}100%{transform:translateY(0);opacity:0.6;}}\nsection:last-of-type .scroll-hint{display:none;}\n</style>\n</head>\n<body>\n<div class=\"navbar\"><h2>${titulo}</h2></div>`;
+
+      etapas.forEach((i, idx) => {
+        const icon = document.getElementById(`emojiInput${i}`).value;
+        const titulo = document.getElementById(`titulo${i}`).value;
+        const descricao = document.getElementById(`descricao${i}`).value;
+        html += `\n<section><div class=\"content\"><div class=\"icon\">${icon}</div><h1>${idx + 1}. ${titulo}</h1><p>${descricao}</p></div><div class=\"scroll-hint\">⬇️</div></section>`;
+      });
+
+      html += `\n</body>\n</html>`;
+      return html;
+    }
+
+    function visualizarHTML() {
+      const html = gerarHTMLFinal();
+      const preview = document.getElementById('previewFrame').contentWindow.document;
+      preview.open();
+      preview.write(html);
+      preview.close();
+    }
+
+    function baixarHTML() {
+      const conteudo = gerarHTMLFinal();
+      const blob = new Blob([conteudo], { type: 'text/html' });
+      const url = URL.createObjectURL(blob);
+      const link = document.createElement('a');
+      link.href = url;
+      link.download = 'fluxo.html';
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
+    }
+
+    function baixarPDF() {
+      const html = gerarHTMLFinal();
+      const novaJanela = window.open('', '_blank');
+      novaJanela.document.write(html);
+      novaJanela.document.close();
+      novaJanela.focus();
+      setTimeout(() => novaJanela.print(), 500);
+    }
+  </script>
 </body>
 </html>
